Market ID Listing

--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
     "LOLI_ID": "281208420466425857",
     "UNKNOWN_POKES": "458691672063344641",
     "GETNUM_WL_SERVERS": ["413681152323485696"],
-    "GETNUM_WL_CHANNELS": ["437222018023424003", "437221770307567617"],
+    "GETNUM_WL_CHANNELS": ["437222018023424003", "437221770307567617", "437221732298915840"],
     "USER_PREFIX": [{"ID":"437221040528162819", "PREFIX":"!"},{"ID":"438669222059442176", "PREFIX":"owo "},{"ID":"439409257796861953", "PREFIX":"!"},{"ID":"438732465444618251", "PREFIX":";"}]
 }
